--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -8,7 +8,7 @@ header{
     margin-bottom: 30px;
 }
 .logo{
-    background-image: url('/images/logo.png');
+    background-image: url('../images/logo.png');
     background-repeat: no-repeat;
     height: 60px;
     width: 142px;
