--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -60,7 +60,7 @@ padding-left: 10px;
     margin-top: 0%;
 }
 .max_guest{
-    background-image: url('/images/icon_group.png');
+    background-image: url('../images/icon_group.png');
     background-repeat: no-repeat;
     background-position: center;
     width: 100px;
@@ -71,7 +71,7 @@ padding-left: 10px;
     margin: 60px 0px 0px 0px;
 }
 .number_rooms{
-    background-image: url('/images/icon_bed.png');
+    background-image: url('../images/icon_bed.png');
     background-repeat: no-repeat;
     background-position: center;
     width: 100px;
@@ -81,7 +81,7 @@ padding-left: 10px;
     margin: 60px 0px 0px 0px;
 }
 .number_bathrooms{
-    background-image: url('/images/icon_bath.png');
+    background-image: url('../images/icon_bath.png');
     background-repeat: no-repeat;
     background-position: center;
     width: 100px;
